--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"studio": "drizzle-kit studio --config drizzle.config.ts",
-		"generate": "drizzle-kit generate:pg --config drizzle.config.ts",
-		"migrate": "drizzle-kit push:pg --config drizzle.config.ts"
+		"generate": "drizzle-kit generate",
+		"migrate": "drizzle-kit push"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -24,7 +24,7 @@
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.20.14",
+		"drizzle-kit": "^0.24.2",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -45,14 +45,14 @@
 	"type": "module",
 	"dependencies": {
 		"@aws-sdk/client-ses": "^3.470.0",
-		"@axiomhq/js": "^1.0.0-rc.1",
+		"@axiomhq/js": "^1.2.0",
 		"@internationalized/date": "^3.5.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.2",
 		"arctic": "^1.2.0",
 		"bits-ui": "^0.11.8",
 		"clsx": "^2.0.0",
 		"cmdk-sv": "^0.0.12",
-		"drizzle-orm": "^0.29.3",
+		"drizzle-orm": "^0.33.0",
 		"formsnap": "^0.4.1",
 		"lucia": "^3.0.1",
 		"lucide-svelte": "^0.297.0",
